--- a/embed_gen/docs_embedder.ipynb
+++ b/embed_gen/docs_embedder.ipynb
@@ -11,6 +11,7 @@
    "source": [
     "from domino_data.vectordb import DominoPineconeConfiguration\n",
     "from langchain.chains.question_answering import load_qa_chain\n",
+    "from langchain_community.embeddings import MlflowEmbeddings\n",
     "from langchain.embeddings.openai import OpenAIEmbeddings\n",
     "from langchain.document_loaders import PyPDFLoader\n",
     "from langchain.llms import OpenAI\n",
@@ -267,18 +268,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 337,
-   "id": "6962d97c-24f4-4fe8-98b4-60beb60cafb9",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "OPENAI_API_KEY = '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'"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "8f0b540d-b0e1-4dc9-9dbd-f7cba85cc628",
    "metadata": {
@@ -309,7 +298,10 @@
    },
    "outputs": [],
    "source": [
-    "embeddings = OpenAIEmbeddings(openai_api_key=OPENAI_API_KEY)"
+    "embeddings = MlflowEmbeddings(\n",
+    "    target_uri=os.environ[\"DOMINO_MLFLOW_DEPLOYMENTS\"],\n",
+    "    endpoint=\"embeddings\",\n",
+    ")"
    ]
   },
   {
