Add comments and sample_files

--- a/embed_gen/docs_embedder.ipynb
+++ b/embed_gen/docs_embedder.ipynb
@@ -48,9 +48,10 @@
    },
    "outputs": [],
    "source": [
-    "# replace with path to your .csv metada file + pdfs directory\n",
-    "metadata_file_path = data_dir + \"/domino/datasets/local/Dataset_source_pdfs/pages.csv\"\n",
-    "page_pdfs_dir_path = data_dir + \"/domino/datasets/local/Dataset_source_pdfs/pdfs\""
+    "# replace with path to your .csv metadata file + pdfs directory\n",
+    "# the embed_gen/sample_files directory has an example of how the metadata (pages.csv) and page pdfs (in pdfs dir) should be formatted\n",
+    "metadata_file_path = \"/domino/datasets/local/Dataset_source_pdfs/pages.csv\"\n",
+    "page_pdfs_dir_path = \"/domino/datasets/local/Dataset_source_pdfs/pdfs\""
    ]
   },
   {
@@ -228,9 +229,11 @@
     }
    ],
    "source": [
+    "# Replace any special characters in the text. \n",
+    "# Also remove the information in the pdf header, footer and the Domino copyright related text. \n",
+    "# This gives a clean text with just the docs content to vectorize\n",
     "for i in range(len(article_texts)):\n",
     "    for j in range(len(article_texts[i])):\n",
-    "        print (article_texts[i][j].page_content)\n",
     "        article_texts[i][j].page_content = article_texts[i][j].page_content.replace(\"\\r\\n\", \" \")\n",
     "        article_texts[i][j].page_content = article_texts[i][j].page_content.replace(\"\\n\", \" \")\n",
     "        article_texts[i][j].page_content = article_texts[i][j].page_content.replace(\"\\x00\", \" \")\n",
@@ -238,10 +241,7 @@
     "        article_texts[i][j].page_content = article_texts[i][j].page_content.replace(\"Domino Data Lab. All rights reserved.\", \" \")\n",
     "        article_texts[i][j].page_content = article_texts[i][j].page_content.replace(\"User Guide Admin Guide API Guide Release Notes Light Dark Search\", \" \")\n",
     "        article_texts[i][j].page_content = article_texts[i][j].page_content.replace(\"\\t\", \" \")\n",
-    "        article_texts[i][j].page_content = (re.sub(' +', ' ', article_texts[i][j].page_content))\n",
-    "        print (\"------ \\n \")\n",
-    "        print (article_texts[i][j].page_content)\n",
-    "        print (\"======= \\n \")"
+    "        article_texts[i][j].page_content = (re.sub(' +', ' ', article_texts[i][j].page_content))"
    ]
   },
   {
@@ -264,6 +264,7 @@
     }
    ],
    "source": [
+    "# Print sample to test quality\n",
     "article_texts[0][2].page_content"
    ]
   },
@@ -348,7 +349,7 @@
     "\n",
     "print(pinecone.list_indexes())\n",
     "\n",
-    "# Replace the place holder {{index_name}} below with the index name.\n",
+    "# Use the appropriate index_name based on the index you want to use\n",
     "index = pinecone.Index(index_name)\n",
     "index.describe_index_stats()"
    ]
@@ -454,8 +455,7 @@
     }
    ],
    "source": [
-    "# query = \"Connect to Google Cloud Storage\"\n",
-    "query = \"After connecting to your Data Source\"\n",
+    "query = \"How can I use a Data Source in my Domino project?\"\n",
     "docs = docsearch.similarity_search(query)\n",
     "docs[0].page_content"
    ]
@@ -479,19 +479,6 @@
    "source": [
     "llm = OpenAI(temperature=0, openai_api_key=OPENAI_API_KEY)\n",
     "chain = load_qa_chain(llm, chain_type=\"stuff\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 161,
-   "id": "c684f830-25ba-4c9f-922b-5630c87733a4",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# query = \"Where are my credentials stored?\"\n",
-    "# chain.run(input_documents=docs, question=query)"
    ]
   },
   {
